--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,11 +1,11 @@
-<div class="col-xs-12" *ngIf="!items">
+<div class="col-xs-12" *ngIf="items.length === 0">
   <p class="text-danger">
-    Não há itens no seu carrinho. Que tal começar por <a [routerLink]="['/rrestaurants']">aqui</a>?
+    Não há itens no seu carrinho. Que tal começar por <a [routerLink]="['/restaurants']">aqui</a>?
   </p>
 </div>
 
 
-<div class="col-xs-12 table-responsive" *ngIf="items">
+<div class="col-xs-12 table-responsive" *ngIf="items.length > 0">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -22,7 +22,7 @@
             <a (click)="emitDecreaseQty(item)" class="btn btn-sm">
               <i class="fa fa-minus"></i>
             </a>
-            {{item.quantify}}
+            {{item.quantity}}
             <a (click)="emitIncreaseQty(item)" class="btn btn-sm">
               <i class="fa fa-plus"></i>
             </a>
@@ -30,7 +30,7 @@
           <td>{{item.menuItem.name}}</td>
 
           <td>{{item.menuItem.description}}</td>
-          <td class="text-right">{{item.value() | currency: 'BR': true}}</td>
+          <td class="text-right">{{item.value() | currency: 'BRL': true}}</td>
           <td class="text-right">
             <a (click)="emitRemove(item)" class="btn btn-sm danger">
               <i class="fa fa-remove"></i>
