--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,8 +4,7 @@
 
 <section class="content">
   <section class="invoice">
-    {{form.valid}} {{form.value | json }}
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -14,43 +13,51 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Seus Dados:</p>
+          <div class="col-sm-6 col-xs-12">
+              <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome">
+                <input class="form-control" formControlName="name" autocomplete="off" placeholder="Nome">
+              </mt-input-container>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                    <input type="text" class="form-control" formControlName="email"  placeholder="E-mail" autocomplete="off">
+                </mt-input-container>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                    <input type="text" class="form-control" formControlName="emailConfirmation" placeholder="Confirmação do E-mail" autocomplete="off">
+                </mt-input-container>
+            </div>
+
+        </div>
+      </div>
+
       <div class="row invoice-info">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-
-          <div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)" 
-                                  [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-            <label class="control-label sr-only" for="iptAddressSuccess">
-              <i class="fa fa-check"></i>Endereço</label>        
-              <input type="text" class="form-control" name="address" ngModel required #iptAddress="ngModel" autocomplete="off">
-            <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-              <i class="fa fa-check"></i> Ok</span>
-
-            <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-              <i class="fa fa-remove"></i>Campo obrigatório</span>
-          </div>
-
+          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço">
+            <input class="form-control" formControlName="address" autocomplete="off" placeholder="Endereço">
+          </mt-input-container>
         </div>
+
         <div class="col-sm-4 col-xs-6">
-          <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)" 
-                                  [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-            <label class="control-label sr-only" for="inputSuccess">
-              <i class="fa fa-check"></i> Número</label>
-            <input type="text" class="form-control" name="number" ngModel required #iptNumber="ngModel" placeholder="Número" pattern="^[0-9]*$" autocomplete="off">
-            <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-              <i class="fa fa-check"></i> Ok</span>
-            <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-              <i class="fa fa-remove"></i> Campo obrigatório e somente números</span>
-          </div>
+          <mt-input-container errorMessage="Número obrigatório" label="Número">
+              <input type="text" class="form-control" formControlName="number"  placeholder="Número" pattern="^[0-9]*$" autocomplete="off">
+          </mt-input-container>
         </div>
-        <div class="col-sm-2 col-xs-6">
-          <div class="form-group">
-            <label class="control-label sr-only" for="inputSuccess">
-              <i class="fa fa-check"></i> Complemento</label>
-            <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
 
+        <div class="col-sm-2 col-xs-6">
+          <div class="form-group">                        
+              <mt-input-container>
+                  <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
+              </mt-input-container>
           </div>
 
         </div>
@@ -63,7 +70,10 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        <mt-order-items></mt-order-items>
+        <mt-order-items [items]="cartItems()"
+        (increaseQty)="increaseQty($event)"
+        (decreaseQty)="decreaseQty($event)"
+        (remove)="remove($event)"></mt-order-items>
         <!-- /.col -->
       </div>
       <!-- /.row -->
@@ -74,32 +84,16 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="paymentOptions" name="paymentOption" ngModel></mt-radio>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
           </div>
 
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
-
-          <div class="table-responsive">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <th style="width:50%">Itens:</th>
-                  <td class="text-right">R$ 20,00</td>
-                </tr>
-                <tr>
-                  <th>Frete:</th>
-                  <td class="text-right">R$ 8,00</td>
-                </tr>
-                <tr>
-                  <th>Total:</th>
-                  <td class="text-right">R$ 28,00</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <mt-delivery-costs
+          [delivery]="delivery"
+          [itemsValue]="itemsValue()"></mt-delivery-costs>
         </div>
         <!-- /.col -->
       </div>
@@ -108,7 +102,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-success pull-right" [disabled]="!form.valid">
+        <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" [disabled]="!orderForm.valid || cartItems().length === 0">
           <i class="fa fa-credit-card"></i> Concluir Pedido</button>
       </div>
     </div>
