--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12" *ngIf="items.length === 0">
-  <p class="text-danger">
+  <p class="has-error-block">
     Não há itens no seu carrinho. Que tal começar por <a [routerLink]="['/restaurants']">aqui</a>?
   </p>
 </div>
