--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -13,9 +13,16 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12">
+      <div class="row invoice-info">
+        <div class="col-xs-12 col-sm-9">
           <p class="lead">Seus Dados:</p>
+        </div>
+        
+        <div class="col-xs-12 col-sm-3">
+          <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')">
+            <i class="fa fa-remove"></i>Email-s não conferem.</span>
+        </div>
+
           <div class="col-sm-6 col-xs-12">
               <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome">
                 <input class="form-control" formControlName="name" autocomplete="off" placeholder="Nome">
@@ -34,8 +41,7 @@
                 </mt-input-container>
             </div>
 
-        </div>
-      </div>
+        </div>      
 
       <div class="row invoice-info">
         <div class="col-xs-12">
